Rework GUI, Added more protection, Bug fixes