@@ -7,12 +7,14 @@ import me.drex.itsours.claim.permission.node.RootNode;
 import me.drex.itsours.claim.permission.util.InvalidPermissionException;
 import me.drex.itsours.command.argument.PermissionArgument;
 
+import java.util.Arrays;
 import java.util.LinkedList;
 import java.util.List;
 
 public class PermissionImpl implements Permission {
 
-    public static final String SEPARATOR = "\\.";
+    public static final String SEPARATOR = ".";
+    public static final String SEPARATOR_REGEX = "\\.";
 
     private final String permission;
     private final List<Node> nodes;
@@ -24,7 +26,7 @@ public class PermissionImpl implements Permission {
 
     private PermissionImpl(List<Node> nodes) {
         this.nodes = nodes;
-        this.permission = String.join(SEPARATOR, nodes.stream().map(Node::getId).toList());
+        this.permission = String.join(SEPARATOR, nodes.stream().filter(node -> !(node instanceof RootNode)).map(Node::getId).toList());
     }
 
     public static PermissionImpl permission(String permission) throws InvalidPermissionException {
@@ -44,13 +46,20 @@ public class PermissionImpl implements Permission {
     }
 
     public static PermissionImpl withNodes(Node... nodes) {
-        return new PermissionImpl(List.of(nodes));
+        if (nodes.length == 0) throw new IllegalArgumentException("Permissions needs at least 1 node");
+        List<Node> list = new LinkedList<>();
+        if (!(nodes[0] instanceof RootNode)) {
+            list.add(PermissionManager.COMBINED);
+        }
+        list.addAll(Arrays.asList(nodes));
+        return new PermissionImpl(list);
     }
 
     private List<Node> parse(RootNode rootNode) throws InvalidPermissionException {
         final List<Node> nodes = new LinkedList<>();
-        String[] parts = permission.split(SEPARATOR);
+        String[] parts = permission.split(SEPARATOR_REGEX);
         Node currentNode = rootNode;
+        nodes.add(rootNode);
         for (String part : parts) {
             Node node = currentNode.getNodesMap().get(part);
             if (node == null) throw new InvalidPermissionException("Couldn't find " + part + " node in " + currentNode.getName());
@@ -78,6 +87,13 @@ public class PermissionImpl implements Permission {
     }
 
     @Override
+    public Permission withNode(Node node) {
+        List<Node> nodes = new LinkedList<>(this.nodes);
+        nodes.add(node);
+        return new PermissionImpl(nodes);
+    }
+
+    @Override
     public void validateContext(Node.ChangeContext context) throws CommandSyntaxException {
         for (Node node : getNodes()) {
             if (!node.canChange(context)) throw PermissionArgument.FORBIDDEN;
@@ -87,6 +103,11 @@ public class PermissionImpl implements Permission {
     @Override
     public List<Node> getNodes() {
         return nodes;
+    }
+
+    @Override
+    public Node getLastNode() {
+        return nodes.get(nodes.size() - 1);
     }
 
     @Override
@@ -100,6 +121,11 @@ public class PermissionImpl implements Permission {
             return this.permission.equals(permission.permission);
         }
         return false;
+    }
+
+    @Override
+    public String toString() {
+        return String.format("Permission[id=%s, nodes=%s]", permission, Arrays.toString(nodes.toArray()));
     }
 
     @Override
